# doc_tests_hw14

./: .env  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migration/: env.py
migration/versions/: 87914c3e7541_init.py
postgres-data/: postmaster.pid
postgres-data/base/13458/: pg_internal.init
postgres-data/base/16384/: pg_internal.init
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13458.stat  db_16384.stat  global.stat
src/: schemas.py
src/confg/: config.ini  config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test.db  test_route_users.py  test_unit_repository_contacts.py  tests_unit_repository_users.py
