[tool.poetry]
name = "hw13"
version = "0.1.0"
description = ""
authors = ["VOliinyk1 <vov.25.98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
pydantic = {extras = ["email"], version = "^1.10.7"}
alembic = "^1.10.4"
psycopg2 = "^2.9.6"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
jinja2 = "^3.1.2"
passlib = "^1.7.4"
django-environ = "^0.10.0"
python-jose = "^3.3.0"
fastapi-mail = "^1.2.8"
python-multipart = "^0.0.6"
fastapi-limiter = "^0.1.5"
redis = "4.5.1"
cloudinary = "^1.32.0"
bcrypt = "^4.0.1"
pytest-mock = "^3.10.0"
httpx = "^0.24.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.group.dev.dependencies]
sphinx = "^6.2.1"
pytest-cov = "^4.0.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
